--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<title>IT-Âü°Í</title>
+<title>IT-æ›¼å·´</title>
 <frameset framespacing="0" border="0" rows="0" frameborder="0">
 <frame name="main" src="https://my.oschina.net/xiaozhiwen/blog" scrolling="auto" noresize>
 </frameset>
