--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
 <title>IT-曼巴</title>
 <frameset framespacing="0" border="0" rows="0" frameborder="0">
 <frame name="main" src="https://my.oschina.net/xiaozhiwen/blog" scrolling="auto" noresize>
