--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <li><a href="https://my.oschina.net/xiaozhiwen/blog/916017" target="view_window">Git常用命令</a></li>
                     </ul>
                 </li>
-                <li><a href="http://itmamba.com" target="view_window">Contact Us</a></li>
+                <li><a href="https://my.oschina.net/xiaozhiwen" target="view_window">开源中国博客</a></li>
             </ul>
         </div>
         <!-- End Menu -->
