--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
         <!-- Begin Menu -->
         <div id="menu" class="menu-v">
             <ul>
-                <li><a href="index.html" class="active">Home</a>
+                <li><a href="index.html" class="active">开源中国</a>
 <!--                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="index2.html">Home w/ Portfolio</a></li>
-                        <li><a href="index3.html">Home w/ Testimonials</a></li>
+                        <li><a href="https://my.oschina.net/xiaozhiwen" target="view_window">最新内容更新于开源中国</a></li>
+                        <li><a href="https://my.oschina.net/xiaozhiwen">Home</a></li>
+                        <li><a href="https://my.oschina.net/xiaozhiwen">Home w/ Portfolio</a></li>
+                        <li><a href="https://my.oschina.net/xiaozhiwen">Home w/ Testimonials</a></li>
                     </ul>-->
                 </li>
                 <li><a href="#Linux">Linux搭建服务器</a>
@@ -149,6 +150,7 @@
     <!-- Begin Content -->
     <div id="content">
         <h1 class="title">Object itMamba = new Blog("IT-Mamba");</h1>
+        <h1 class="title"><a href="https://my.oschina.net/xiaozhiwen" target="view_window">（更多内容请跳转至开源中国）</h1>
         <div class="line"></div>
         <div class="intro">此站点用于记录工作中遇到的问题以及部分学习的笔记，欢迎指出不足之处，共同进步。</div>
 
