--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
         <!-- Begin Menu -->
         <div id="menu" class="menu-v">
             <ul>
-                <li><a href="index.html" class="active">开源中国</a>
+                <li><a href="https://my.oschina.net/xiaozhiwen" class="active">开源中国</a>
 <!--                    <ul>
-                        <li><a href="https://my.oschina.net/xiaozhiwen" target="view_window">最新内容更新于开源中国</a></li>
                         <li><a href="https://my.oschina.net/xiaozhiwen">Home</a></li>
                         <li><a href="https://my.oschina.net/xiaozhiwen">Home w/ Portfolio</a></li>
                         <li><a href="https://my.oschina.net/xiaozhiwen">Home w/ Testimonials</a></li>
