--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <!-- Begin Content -->
     <div id="content">
         <h1 class="title">Object itMamba = new Blog("IT-Mamba");</h1>
-        <h1 class="title"><a href="https://my.oschina.net/xiaozhiwen">（更多内容请跳转至开源中国）</a></h1>
+        <h1 class="title"><a href="https://my.oschina.net/xiaozhiwen" target="view_window">（更多内容请跳转至开源中国）</a></h1>
         <div class="line"></div>
         <div class="intro">此站点用于记录工作中遇到的问题以及部分学习的笔记，欢迎指出不足之处，共同进步。</div>
 
